--- a/ModularizediOSDemo/Podfile
+++ b/ModularizediOSDemo/Podfile
@@ -6,6 +6,8 @@ target 'ModularizediOSDemo' do
   use_frameworks!
 
   # Pods for ModularizediOSDemo
+#  pod 'CoreModule', :path => '../kmm/modules/CoreModule'
+#  pod 'ProfileModule', :path => '../kmm/modules/ProfileModule'
   pod 'ModularizedSDK', :path => '../kmm/ModularizedSDK'
 
 end
